# Tegtory

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  README.md  alembic.ini  pyproject.toml  requirements.txt
.github/workflows/: deploy.dev.yml  deploy.prod.yml  run.tests.yml
docker/: Dockerfile  docker-compose.dev.yml  docker-compose.local.yml  docker-compose.prod.yml
protos/: auth.proto  money.proto
protos/tegtory/: auth.proto  money.proto
tegtory/: __main__.py
tegtory/common/: deprecated.py  exceptions.py  settings.py
tegtory/domain/commands/: __init__.py  factory.py
tegtory/domain/entities/: __init__.py  association.py  factory.py  logistic_company.py  shop.py  user.py
tegtory/domain/events/: subscribe.py
tegtory/domain/interfaces/: __init__.py  eventbus.py  factory.py  logistic_company.py  product.py  shop.py  storage.py  user.py
tegtory/domain/queries/: __init__.py  factory.py  user.py
tegtory/domain/services/: factory.py  money.py  work.py
tegtory/domain/use_cases/: base.py  factory.py
tegtory/domain/use_cases/commands/: base.py  factory.py  pay_required.py  storage.py  user.py
tegtory/domain/use_cases/event/: factory.py  user.py
tegtory/domain/use_cases/queries/: base.py  factory.py  shop.py  user.py
tegtory/infrastructure/: command.py  di.py  executor.py  injectors.py  query.py
tegtory/infrastructure/events/: eventbus.py  events.py
tegtory/infrastructure/migration/: env.py
tegtory/infrastructure/repositories/: __init__.py  factory.py  product.py  shop.py  storage.py  user.py
tegtory/presenters/: base_service.py  bot.py
tegtory/presenters/aiogram/: images.py  service.py
tegtory/presenters/aiogram/filters/: factory.py  profile.py  subscribe.py
tegtory/presenters/aiogram/handlers/: __init__.py  errors.py  user.py
tegtory/presenters/aiogram/kb/: callbacks.py  city.py  factory.py  other.py  shop.py
tegtory/presenters/aiogram/messages/: city.py  factory.py  shop.py  user.py
tegtory/presenters/aiogram/middlewares/: auth.py  executor.py
tegtory/presenters/aiogram/utils/: auth.py  cache.py
tegtory/presenters/shared/: base_service.py
tegtory/presenters/shared/filters/: subscribe.py
tegtory/presenters/shared/handlers/: user.py
tests/: conftest.py
tests/entities/: test_factory.py  test_shop.py  test_storage.py  test_user.py
tests/services/: test_factory_service.py  test_money_service.py  test_work_service.py
tests/use_cases/: test_base.py  test_events.py  test_factory.py  test_pay_required.py  test_shop.py  test_storage.py  test_user.py
(+12 files in other folders)
